--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,7 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+.content {
+  background-color: white;
+  padding: 16px 8px;
+}
